--- a/templates/detailsProduit.html.twig
+++ b/templates/detailsProduit.html.twig
@@ -1,9 +1,25 @@
-<h1>{{produit.nom}}</h1>
-<h1>{{produit.nom}}</h1>
+<div class="row">
 
-<h1>{{produit.nom}}</h1>
 
-<h1>{{produit.nom}}</h1>
+    <section class="col-6">
+        
+    </section>
 
-<h1>{{produit.nom}}</h1>
+	<section class="col-6">
 
+		<h1>{{produit.nom}}</h1>
+
+		<h1>{{categorie.description}}</h1>
+
+		<h1>{{produit.description}}</h1>
+
+		<hr>
+
+		<h1>{{produit.prix}}</h1>
+
+		<h1>{{produit.Qttestock}}</h1>
+
+	</section>
+
+
+</div>
