Few fixes + Contact route

--- a/templates/commun/entete.html.twig
+++ b/templates/commun/entete.html.twig
@@ -8,8 +8,8 @@
 
 </div>
 <div class="bandeau">
-	<button class="btn btn-secondary">Contact</button>
+	<a href="{{path('contact')}}"> <button class="btn btn-secondary">Contact</button></a>
 	<button class="btn btn-secondary">Créer un compte</button>
 	<button class="btn btn-secondary">Connexion</button>
-	<button class="btn btn-secondary">Panier 0 items</button>
+	<a href="{{path('catalogue')}}"> <button class="btn btn-secondary">Panier 0 item</button></a>
 </div>
