--- a/templates/catalogue.html.twig
+++ b/templates/catalogue.html.twig
@@ -19,6 +19,7 @@
 			{% for c in categories %}
 				<a class="btn btn-info" href="{{path('filtre_categorie',{id:c.id})}}">{{c.description}}</a>
 			{% endfor %}
+				<a class="btn btn-info" href="{{path('catalogue')}}">Toutes</a>
 		</section>
 	</div>
 
@@ -29,12 +30,14 @@
 				<section>
 					{{p.nom}}
 				</section>
-				
-				<section class='col-4'> 
 
-					<a class="boutonModal" href="{{path('produit_details',{id:p.id})}}">modale</a>
-		
-					<img class="produitImage" src="{{asset("images/produits/ImageManquante.png")}}" alt="TODO">
+				<section class='col-4'>
+
+					<a class="boutonModal" href="{{path('produit_details',{id:p.id})}}">
+						<img class="produitImage" src="images/produits/{{p.image}}.png" alt="TODO">
+					</a>
+
+
 					<img class="panier col-4" src="{{asset("images/panier.png")}}" alt="TODO">
 				</section>
 
