--- a/templates/commun/entete.html.twig
+++ b/templates/commun/entete.html.twig
@@ -1,3 +1,7 @@
+<!-- Nom: Loic Leonetti -->
+<!-- Date: 2024-02-24   -->
+
+
 <div class="row entete">
 	<img class="col-3" src="" alt="LOGO TODO">
 	<section class='col-9'>
