--- a/templates/catalogue.html.twig
+++ b/templates/catalogue.html.twig
@@ -1,52 +1,66 @@
+
+
 {% extends('base.html.twig') %}
+
+
 
 {% block javascripts %}
 	<script src="{{asset('js/modaleProduit.js')}}"></script>
 {% endblock %}
 
 {% block body %}
+	
+<!-- Nom: Loic Leonetti -->
+<!-- Date: 2024-02-24   -->
 
 	<div class='row'>
 
 		<div class='col-3'>
 			<section>
-				<input placeholder="texte recherché" id="inputRecherche" val=""></input>
-			<a class="btn btn-info" href="{{path('filtre_recherche',{recherche:"ProduitsTest"})}}">Rechercher</a>
-		</section>
+				<form action="{{path('filtre')}}">
+					Recherche:
+					<input name="texteFiltre">
+					<br>
+					Categorie:
+					<select name="categorieFiltre">
+						<option value="Toutes">Toutes</option>
+						{% for c in categories %}
+							<option value="{{c.Id}}">{{c.Description}}</option>
+						{% endfor %}
+					</select>
+					<br>
+					<button type="submit" class="btn btn-info">Filtrer</button>
+				</form>
+			</section>
+		</div>
 
-		<section class="filtreCategorie">
-			<p>Categories:</p>
-			{% for c in categories %}
-				<a class="btn btn-info" href="{{path('filtre_categorie',{id:c.id})}}">{{c.description}}</a>
+		<section class='catalogue col-9 row'>
+			{% for p in produits %}
+
+				
+
+				<div class='produit row col-3'>
+
+					<section>
+						{{p.nom}}
+					</section>
+
+					<section class='col-4'>
+
+						<a class="boutonModal" href="{{path('produit_details',{id:p.id})}}">
+							<img class="produitImage" src="images/produits/{{p.image}}.png" alt="TODO">
+						</a>
+
+						<img class="panier col-4" src="{{asset("images/panier.png")}}" alt="TODO">
+					</section>
+
+
+				</div>
 			{% endfor %}
-				<a class="btn btn-info" href="{{path('catalogue')}}">Toutes</a>
 		</section>
+
+
+		<section id="modaleProduit" title="Description du produits"></section>
+
 	</div>
-
-	<section class='catalogue col-9 row'>
-		{% for p in produits %}
-
-			<div class='produit row col-3'>
-				<section>
-					{{p.nom}}
-				</section>
-
-				<section class='col-4'>
-
-					<a class="boutonModal" href="{{path('produit_details',{id:p.id})}}">
-						<img class="produitImage" src="images/produits/{{p.image}}.png" alt="TODO">
-					</a>
-
-
-					<img class="panier col-4" src="{{asset("images/panier.png")}}" alt="TODO">
-				</section>
-
-
-			</div>
-		{% endfor %}
-	</section>
-
-
-	<section id="modaleProduit" title="Description du produits"></section>
-
-</div>{% endblock %}
+{% endblock %}
