--- a/templates/commun/entete.html.twig
+++ b/templates/commun/entete.html.twig
@@ -3,7 +3,7 @@
 
 
 <div class="row entete">
-	<img class="col-3" src="" alt="LOGO TODO">
+	<img class="col-3 img-fluid" style="width: 150px" src="images/logo.png" alt="logo">
 	<section class='col-9'>
 
 		<h1>Boutique Tp1</h1>
