--- a/templates/detailsProduit.html.twig
+++ b/templates/detailsProduit.html.twig
@@ -5,7 +5,7 @@
 
 
     <section class="col-6">
-        <img class="produitImage" src="images/produits/{{produit.image}}.png" alt="{{produit.nom}}">
+        <img class="produitImage" src="images/modal/{{produit.image}}.png" alt="{{produit.nom}}">
     </section>
 
 	<section class="col-6">
