--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -1,10 +1,14 @@
-<!-- Nom: Loic Leonetti -->
-<!-- Date: 2024-02-24   -->
+
 
 
 {% extends('base.html.twig') %}
 
+
 {% block body %}
+
+{% block javascripts %}
+	<script src="{{asset('js/modaleProduit.js')}}"></script>
+{% endblock %}
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
