--- a/templates/commun/entete.html.twig
+++ b/templates/commun/entete.html.twig
@@ -6,7 +6,7 @@
 	<img class="col-3 img-fluid" style="width: 150px" src="images/logo.png" alt="logo">
 	<section class='col-9'>
 
-		<h1>Boutique Tp1</h1>
+		<h1>Chatropie</h1>
 
 	</section>
 
