TODO: add porduits in panier

--- a/templates/commun/entete.html.twig
+++ b/templates/commun/entete.html.twig
@@ -15,5 +15,5 @@
 	<a href="{{path('contact')}}"> <button class="btn btn-secondary">Contact</button></a>
 	<button class="btn btn-secondary">Créer un compte</button>
 	<button class="btn btn-secondary">Connexion</button>
-	<a href="{{path('catalogue')}}"> <button class="btn btn-secondary">Panier 0 item</button></a>
+	<a href="{{path('panier')}}"> <button class="btn btn-secondary">Panier 0 item</button></a>
 </div>
