--- a/templates/commun/entete.html.twig
+++ b/templates/commun/entete.html.twig
@@ -2,8 +2,7 @@
 <!-- Date: 2024-02-24   -->
 
 
-<div class="row entete">
-	<img class="col-3 img-fluid" style="width: 150px" src="images/logo.png" alt="logo">
+	<div class="row entete"> <img class="col-3 img-fluid" style="width: 150px" src="images/logo.png" alt="logo">
 	<section class='col-9'>
 
 		<h1>Chatropie</h1>
@@ -12,8 +11,29 @@
 
 </div>
 <div class="bandeau">
-	<a href="{{path('contact')}}"> <button class="btn btn-secondary">Contact</button></a>
+
+	<a href="{{path('catalogue')}}">
+		<button class="btn btn-secondary">Catalogue</button>
+	</a>
+
+	<a href="{{path('contact')}}">
+		<button class="btn btn-secondary">Contact</button>
+	</a>
+
 	<button class="btn btn-secondary">Créer un compte</button>
 	<button class="btn btn-secondary">Connexion</button>
-	<a href="{{path('panier')}}"> <button class="btn btn-secondary">Panier 0 item</button></a>
+
+	{% if panier.getNombreItem() > 1 %}
+		<a href="{{path('panier')}}">
+			<button class="btn btn-secondary">Panier
+				{{panier.getNombreItem()}}
+				items</button>
+		</a>
+	{% else %}
+		<a href="{{path('panier')}}">
+			<button class="btn btn-secondary">Panier
+				{{panier.getNombreItem()}}
+				item</button>
+		</a>
+	{% endif %}
 </div>
