--- a/templates/catalogue.html.twig
+++ b/templates/catalogue.html.twig
@@ -12,7 +12,10 @@
 	
 <!-- Nom: Loic Leonetti -->
 <!-- Date: 2024-02-24   -->
-
+	<div>
+     {{ include('commun/ZoneFlash.html.twig') }}
+   </div>
+   
 	<div class='row'>
 
 		<div class='col-3'>
