Insertion en bd fonctionelle

--- a/templates/panier.html.twig
+++ b/templates/panier.html.twig
@@ -85,7 +85,7 @@
 							<th>Total</th>
 							<th>{{panier.getTotalAchat()}}</th>
 							<td>
-								<a href="#" class="btn btn-danger">Payer $</a>
+								<a href="{{path('commande')}}" class="btn btn-danger">Payer $</a>
 							</td>
 						</tr>
 
