--- a/templates/confirmationCommande.html.twig
+++ b/templates/confirmationCommande.html.twig
@@ -74,7 +74,7 @@
 
 			<a href="{{path('catalogue')}}"><Button class="btn btn-info">Retour au catalogue</Button></a>
 
-            <a href="{{path('confirmation_commande')}}"><Button class="btn btn-success">Confirmer</Button></a>
+            <a href="{{path('payer_commande')}}"><Button class="btn btn-success">Confirmer</Button></a>
 
 		</div>
 
