--- a/templates/commun/entete.html.twig
+++ b/templates/commun/entete.html.twig
@@ -22,6 +22,7 @@
 	{% else %}
 		<a href="{{path('deconnexion')}}"><button class="btn btn-secondary">Déconnexion</button></a>
 		<a href="{{path('modification')}}"><button class="btn btn-secondary">Modification</button></a>
+		<a href="{{path('historique')}}"><button class="btn btn-secondary">Historique des achats</button></a>
 	{% endif %}
 
 
