--- a/templates/payerCommande.html.twig
+++ b/templates/payerCommande.html.twig
@@ -16,7 +16,7 @@
       <div class="col-3"></div>
       <div class="col-9">
          <H1>Paiement de la commande</h1>
-         <form method='post' onsubmit='return(validerCC(this));' id='carteCr'>
+         <form action="{{path('enregistrement_commande')}}" method='post' onsubmit='return(validerCC(this));' >
            <table>
              <tr>
                <td><h3>Type de carte de crédit</h3></td>
