More than halfway done

--- a/templates/adminAjouterProduit.html.twig
+++ b/templates/adminAjouterProduit.html.twig
@@ -33,9 +33,9 @@
                 {{ form_widget(form.Qtte_seuil_min, {attr:{'class':'form-control courtTexte'} }) }}
                 {{ form_errors(form.Qtte_seuil_min) }}
 
-                {{ form_label(form.idCategorie, "Catégorie") }}
-                {{ form_widget(form.idCategorie, {attr:{'class':'form-control select'} }) }}
-                {{ form_errors(form.idCategorie) }}
+                {{ form_label(form.categorie, "Catégorie") }}
+                {{ form_widget(form.categorie, {attr:{'class':'form-control select'} }) }}
+                {{ form_errors(form.categorie) }}
 
 
                 {{ form_widget(form.ajouter, {'attr': {'class':'btn btn-primary my-2'} } ) }}
