--- a/templates/adminConnexion.html.twig
+++ b/templates/adminConnexion.html.twig
@@ -20,7 +20,7 @@
 				{{ form_errors(form.nom) }}
 
 				{{ form_label(form.mdp, "Mot de passe") }}
-				{{ form_widget(form.mdp, {attr:{'class':'form-control courtTexte'} }) }}
+				{{ form_widget(form.mdp, {attr:{'class':'form-control password'} }) }}
 				{{ form_errors(form.mdp) }}
 
 				{{ form_widget(form.valider, {'attr': {'class':'btn btn-primary my-2'} } ) }}
