--- a/templates/adminMenu.html.twig
+++ b/templates/adminMenu.html.twig
@@ -17,7 +17,7 @@
 			<a><button class="btn btn-primary my-2">Modifier Catégorie</button></a>
 			<a href="{{path('adminAjouterProduit')}}"><button class="btn btn-primary my-2">Ajouter Produit</button></a>
 			<a><button class="btn btn-primary my-2">Modifier Produit</button></a>
-			<a><button class="btn btn-primary my-2" >Rapport Ventes</button></a>
+			<a href="{{path('adminRapportVentes')}}"><button class="btn btn-primary my-2" >Rapport Ventes</button></a>
 			<a><button class="btn btn-primary my-2">Produits de l'inventaire</button></a>
 			<a><button class="btn btn-primary my-2">Produits à commander</button></a>
 		</div>
