Added Produit A Commander

--- a/templates/adminMenu.html.twig
+++ b/templates/adminMenu.html.twig
@@ -19,7 +19,7 @@
 			<a><button class="btn btn-primary my-2">Modifier Produit</button></a>
 			<a href="{{path('adminRapportVentes')}}"><button class="btn btn-primary my-2" >Rapport Ventes</button></a>
 			<a href="{{path('adminProduits')}}"><button class="btn btn-primary my-2">Produits de l'inventaire</button></a>
-			<a><button class="btn btn-primary my-2">Produits à commander</button></a>
+			<a href="{{path('adminProduitsCommander')}}"><button class="btn btn-primary my-2">Produits à commander</button></a>
 		</div>
         
 		<div class="col-3">
