--- a/templates/adminMenu.html.twig
+++ b/templates/adminMenu.html.twig
@@ -14,7 +14,7 @@
 
 		<div class="col-2">
 			<a href="{{path('adminAjouterCategorie')}}"><button class="btn btn-primary my-2">Ajouter Catégorie</button></a>
-			<a><button class="btn btn-primary my-2">Modifier Catégorie</button></a>
+			<a href="{{path('adminModifierCategorie')}}"><button class="btn btn-primary my-2">Modifier Catégorie</button></a>
 			<a href="{{path('adminAjouterProduit')}}"><button class="btn btn-primary my-2">Ajouter Produit</button></a>
 			<a><button class="btn btn-primary my-2">Modifier Produit</button></a>
 			<a href="{{path('adminRapportVentes')}}"><button class="btn btn-primary my-2" >Rapport Ventes</button></a>
