Added Modifier Produit

--- a/templates/adminMenu.html.twig
+++ b/templates/adminMenu.html.twig
@@ -16,7 +16,7 @@
 			<a href="{{path('adminAjouterCategorie')}}"><button class="btn btn-primary my-2">Ajouter Catégorie</button></a>
 			<a href="{{path('adminModifierCategorie')}}"><button class="btn btn-primary my-2">Modifier Catégorie</button></a>
 			<a href="{{path('adminAjouterProduit')}}"><button class="btn btn-primary my-2">Ajouter Produit</button></a>
-			<a><button class="btn btn-primary my-2">Modifier Produit</button></a>
+			<a href="{{path('adminModifierProduits')}}"><button class="btn btn-primary my-2">Modifier Produit</button></a>
 			<a href="{{path('adminRapportVentes')}}"><button class="btn btn-primary my-2" >Rapport Ventes</button></a>
 			<a href="{{path('adminProduits')}}"><button class="btn btn-primary my-2">Produits de l'inventaire</button></a>
 			<a href="{{path('adminProduitsCommander')}}"><button class="btn btn-primary my-2">Produits à commander</button></a>
